--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,80 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;600;700&family=Fredericka+the+Great&family=Source+Serif+4:opsz@8..60&display=swap');
-    </style>
-    <link rel="stylesheet" href="/stylesheets/styles.css" />
-    <link rel="stylesheet" href="/stylesheets/new.css" />
-    <script defer src="/scripts/newScript.js"></script>
-    <title>Document</title>
-  </head>
-  <body>
-    <nav id="navibar">
-      <a href="/api/v1/crafts" id="logo">LifeCraft</a>
-      <form action="">
-        <input type="text" placeholder="Discover life's inspirations..." />
-        <button><img src="/images/search-icon.png" /></button>
-      </form>
-      <div id="navicons">
-        <div id="signIn">Sign In</div>
-        <img src="/images/cart-icon.png" />
-        <img src="/images/shop-icon.png" />
-        <img src="/images/bell-icon.png" />
+<% layout('layouts/boilerplate') -%>
+<link rel="stylesheet" href="/stylesheets/new.css" />
+<script defer src="/scripts/newScript.js"></script>
+<div id="product">
+  <div id="imagePreview"><span>Your Image Here</span></div>
+  <div id="newForm">
+    <form action="/api/v1/crafts/" method="POST">
+      <div class="editable">
+        <label for="title">Title:</label>
+        <input type="text" name="title" id="title" placeholder="Title" />
       </div>
-    </nav>
-    <div id="product">
-      <div id="imagePreview"><span>Your Image Here</span></div>
-      <div id="newForm">
-        <form action="/api/v1/crafts/" method="POST">
-          <div class="editable">
-            <label for="title">Title:</label>
-            <input type="text" name="title" id="title" placeholder="Title" />
-          </div>
-          <div class="editable">
-            <label for="category-select">Choose a category:</label>
-            <select name="category" id="category-select">
-              <% for (let category of craftSchema.obj.category.enum) {%>
-              <option value="<%=category%>"><%=category%></option>
-              <% } %>
-            </select>
-          </div>
-          <div class="editable">
-            <label for="Image">Image:</label>
-            <input
-              type="text"
-              name="image"
-              id="image"
-              placeholder="Image URL"
-            />
-          </div>
-          <div class="editable">
-            <label for="price">Price:</label>
-            <input type="number" name="price" id="price" placeholder="Price" />
-          </div>
-          <div class="editable">
-            <label for="stock">Stock:</label>
-            <input type="number" name="stock" id="stock" placeholder="Stock" />
-          </div>
-          <div class="editable">
-            <label for="description">Description:</label>
-            <textarea
-              name="description"
-              id="description"
-              cols="75"
-              rows="10"
-              placeholder="Description"
-            ></textarea>
-          </div>
-          <button id="newButton">List Craft</button>
-        </form>
-        <form action="/api/v1/crafts/">
-          <button id="backButton">Back</button>
-        </form>
+      <div class="editable">
+        <label for="category-select">Choose a category:</label>
+        <select name="category" id="category-select">
+          <% for (let category of craftSchema.obj.category.enum) {%>
+          <option value="<%=category%>"><%=category%></option>
+          <% } %>
+        </select>
       </div>
-    </div>
-  </body>
-</html>
+      <div class="editable">
+        <label for="Image">Image:</label>
+        <input type="text" name="image" id="image" placeholder="Image URL" />
+      </div>
+      <div class="editable">
+        <label for="price">Price:</label>
+        <input type="number" name="price" id="price" placeholder="Price" />
+      </div>
+      <div class="editable">
+        <label for="stock">Stock:</label>
+        <input type="number" name="stock" id="stock" placeholder="Stock" />
+      </div>
+      <div class="editable">
+        <label for="description">Description:</label>
+        <textarea
+          name="description"
+          id="description"
+          cols="75"
+          rows="10"
+          placeholder="Description"
+        ></textarea>
+      </div>
+      <button id="newButton">List Craft</button>
+    </form>
+    <form action="/api/v1/crafts/">
+      <button id="backButton">Back</button>
+    </form>
+  </div>
+</div>
