--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,125 +1,41 @@
-#seller-dashboard {
-  display: grid;
-  grid-template-columns: 75% 25%;
-  height: 100vh;
-}
-
-#display {
-  grid-column: 1/1;
+section {
   display: flex;
-  justify-content: flex-end;
-  align-content: flex-start;
-  font-family: 'Dosis', sans-serif;
-  font-weight: 600;
-  flex-wrap: wrap;
-  background-color: #f7ecde;
-}
-
-#display form {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  margin-top: 10px;
-}
-
-#display input {
-  border-radius: 20px;
-  width: 70%;
-  height: 50px;
-}
-
-#display button {
-  border-radius: 50%;
-}
-
-#cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  width: 90%;
-}
-
-#controls {
-  grid-column: 2/2;
-  background-color: #f7ecde;
-  font-family: 'Dosis', sans-serif;
+  width: 100%;
+  font-family: 'Source Serif 4', serif;
   font-weight: 600;
-  display: flex;
-  justify-content: center;
-  align-content: flex-start;
-  flex-wrap: wrap;
+}
+
+section:first-of-type {
   font-size: 30px;
-  row-gap: 20px;
+  letter-spacing: 10px;
+  margin-top: 15px;
 }
 
-#storeName {
-  font-size: 50px;
+#bannerCraft,
+#bannerLife {
   font-family: 'Fredericka the Great', cursive;
+  color: #e9dac1;
+  font-size: 80px;
+  font-weight: 400;
+  letter-spacing: 10px;
 }
 
-.card {
-  width: 350px;
-  height: 250px;
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin: 20px;
-  padding: 10px 0px;
-  border-radius: 20px;
-  transition: 300ms;
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
-}
-
-.card:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
-}
-
-.card img {
-  width: 300px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 20px;
-}
-
-.price {
-  position: absolute;
-  width: 50px;
-  bottom: 22%;
-  left: 11%;
-  background-color: white;
-  border-radius: 10px;
-  text-align: center;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  font-size: 15px;
-}
-.title {
-  font-size: 18px;
-  font-weight: 700;
-}
-
-#new {
-  font-family: 'Dosis', sans-serif;
-  font-weight: 700;
-  font-size: 40px;
-  display: block;
-  width: 100%;
-  padding: 20px 40px;
-  border-radius: 50px;
-  background-color: #9ed2c6;
-  transition: 300ms;
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
-}
-
-#new:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
-}
-
-a {
-  text-decoration: none;
+.indexTitle {
+  font-family: 'Fredericka the Great', cursive;
   color: black;
+  font-size: 60px;
+  font-weight: 400;
+  letter-spacing: 5px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.carousel-inner {
+  border-radius: 50px;
+}
+
+.carousel-item {
+  height: 600px;
 }
