--- a/public/stylesheets/naviForms.css
+++ b/public/stylesheets/naviForms.css
@@ -5,17 +5,41 @@ body {
 #logo {
   font-family: 'Fredericka the Great', cursive;
   font-size: 60px;
+  font-weight: 400;
   color: #e9dac1;
   text-decoration: none;
 }
 
 #navibar {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
   max-height: 100px;
   background-color: #54bab9;
   column-gap: 50px;
+  position: sticky;
+  top: 0px;
+}
+
+#naviTop,
+#naviBottom {
+  width: 100%;
+  font-family: 'Dosis', sans-serif;
+  font-weight: 600;
+}
+
+#naviBottom {
+  display: flex;
+  justify-content: space-around;
+  background-color: white;
+  border-bottom: 2px solid #54bab9;
+  padding: 5px 0px;
+}
+
+#naviTop {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 #navibar img {
@@ -26,10 +50,13 @@ body {
 #navibar input {
   border-radius: 20px;
   width: 90%;
+  height: 60%;
 }
 
 #navibar form {
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 70%;
 }
 
@@ -39,13 +66,17 @@ body {
 
 #navicons {
   display: flex;
+  justify-content: space-around;
   align-items: center;
+}
+
+#naviBottom a {
+  text-decoration: none;
+  color: black;
 }
 
 #signIn,
 #signOut a {
-  font-family: 'Dosis', sans-serif;
-  font-weight: 600;
   font-size: 20px;
   cursor: default;
   text-decoration: none;
