--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,65 +1,115 @@
 <% layout('layouts/boilerplate') -%>
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+  crossorigin="anonymous"
+/>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+  crossorigin="anonymous"
+></script>
 <link rel="stylesheet" href="/stylesheets/index.css" />
-<div id="seller-dashboard">
-  <div id="display">
-    <form action="/api/v1/crafts">
-      <input
-        type="search"
-        name="title"
-        placeholder="Browse your life's work..."
-      />
-      <button><img src="/images/search-icon.png" /></button>
-    </form>
-    <div id="cards">
-      <%for (let craft of crafts){%>
-      <div class="card">
-        <a href="/api/v1/crafts/<%=craft._id%>"
-          ><img src="<%=craft.image%>" /></a
-        ><span class="price">$<%=craft.price.toFixed(2)%></span>
-        <span class="title"><%=craft.title%></span>
+<section>
+  <div id="bannerCraft">Craft</div>
+  Inspired By
+  <div id="bannerLife">Life</div>
+</section>
+<div class="indexTitle">Editor's Picks</div>
+<div class="container">
+  <div class="row d-flex justify-content-center">
+    <div class="col-10">
+      <div
+        id="carouselExampleInterval"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <a
+              href="http://localhost:3000/api/v1/crafts/62fa5aae375f37793980ab81"
+              ><img
+                src="https://i.etsystatic.com/17590463/r/il/0aa996/4033882610/il_794xN.4033882610_4y6n.jpg"
+                class="d-block w-100"
+            /></a>
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Autumn Wreath - $60.00</h5>
+              <p>
+                Handmade Wreath - Artificial Flowers, Foliage and
+                Embellishments.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <a
+              href="http://localhost:3000/api/v1/crafts/62fa5aae375f37793980ab80"
+            >
+              <img
+                src="https://i.etsystatic.com/34955625/r/il/d40c20/3864018764/il_794xN.3864018764_13gm.jpg"
+                class="d-block w-100"
+            /></a>
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Ceramic Dinner Plate - $ 22.50</h5>
+              <p>Set of two minimalist iron red earth plates.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <a
+              href="http://localhost:3000/api/v1/crafts/62fa948f1f311a011dfc5e56"
+            >
+              <img
+                src="https://i.etsystatic.com/7598674/r/il/ed8738/3210692479/il_794xN.3210692479_2sdf.jpg"
+                class="d-block w-100"
+            /></a>
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Handmade Fairy Garden Miniature Pond -$24.50</h5>
+              <p>Wild plants and moss flourish around a terra cotta saucer.</p>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleInterval"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleInterval"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <% } %>
     </div>
   </div>
-  <div id="controls">
-    <div id="storeName">Name of Store</div>
-    <div>Sales Total/Store Rating</div>
-    <form action="/api/v1/crafts/new">
-      <button id="new">New Craft</button>
-    </form>
-    <form action="">
-      <div>Filter Crafts</div>
-      <fieldset>
-        <legend>Category</legend>
-        <% for (let category of craftSchema.obj.category.enum) {%>
-        <input type="radio" id="<%=category%>" name="category" />
-        <label for="<%=category%>"
-          ><a href="/api/v1/crafts/filter?category=<%=category%>"
-            ><%=category%></a
-          ></label
-        >
-        <% } %>
-      </fieldset>
-      <fieldset>
-        <legend>Price</legend>
-        <input type="radio" id="5-" name="price" />
-        <label for="5-"
-          ><a href="/api/v1/crafts/filter?price=lt5">Under $5</a></label
-        >
-        <input type="radio" id="5-50" name="price" />
-        <label for="5-50"
-          ><a href="/api/v1/crafts/filter?price=min5max50">$5 to $50</a></label
-        >
-        <input type="radio" id="50+" name="price" />
-        <label for="50+"
-          ><a href="/api/v1/crafts/filter?price=gt50">Over $50</a></label
-        >
-      </fieldset>
-      <fieldset>
-        <legend>Rating</legend>
-        <input type="radio" id="" />
-        <label for="kraken">Kraken</label>
-      </fieldset>
-    </form>
-  </div>
 </div>
+<div></div>
