--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -7,7 +7,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;600;700&family=Fredericka+the+Great&family=Source+Serif+4:opsz@8..60&display=swap');
     </style>
-    <link rel="stylesheet" href="/stylesheets/styles.css" />
+    <link rel="stylesheet" href="/stylesheets/naviForms.css" />
     <link rel="stylesheet" href="/stylesheets/authForms.css" />
     <script defer src="/scripts/authScript.js"></script>
     <title>LifeCraft</title>
