--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,8 +49,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <a
-              href="http://localhost:3000/api/v1/crafts/62fa5aae375f37793980ab81"
+            <a href="/api/v1/crafts/62fa9b3b0ce120d2a3274602"
               ><img
                 src="https://i.etsystatic.com/17590463/r/il/0aa996/4033882610/il_794xN.4033882610_4y6n.jpg"
                 class="d-block w-100"
@@ -64,9 +63,7 @@
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <a
-              href="http://localhost:3000/api/v1/crafts/62fa5aae375f37793980ab80"
-            >
+            <a href="/api/v1/crafts/62fa9b3b0ce120d2a3274601">
               <img
                 src="https://i.etsystatic.com/34955625/r/il/d40c20/3864018764/il_794xN.3864018764_13gm.jpg"
                 class="d-block w-100"
@@ -77,9 +74,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <a
-              href="http://localhost:3000/api/v1/crafts/62fa948f1f311a011dfc5e56"
-            >
+            <a href="/api/v1/crafts/62fa9b3b0ce120d2a3274604">
               <img
                 src="https://i.etsystatic.com/7598674/r/il/ed8738/3210692479/il_794xN.3210692479_2sdf.jpg"
                 class="d-block w-100"
@@ -113,3 +108,51 @@
   </div>
 </div>
 <div></div>
+<div class="indexTitle">Trending Now</div>
+<div id="trendy">
+  <div class="stack">
+    <a class="large" href="/api/v1/crafts/62fa9b3b0ce120d2a32745fc"
+      ><img
+        src="https://i.etsystatic.com/22679458/r/il/c556c4/3618552539/il_794xN.3618552539_rqr0.jpg"
+      /><span class="price">$5.00</span></a
+    ><a class="small" href="/api/v1/crafts/62fa9b3b0ce120d2a3274607"
+      ><img
+        src="https://i.etsystatic.com/21269943/r/il/3492e8/2210355899/il_794xN.2210355899_n74x.jpg"
+      /><span class="price">$5.00</span></a
+    >
+  </div>
+  <div class="stack">
+    <a class="small" href="/api/v1/crafts/62fa9b3b0ce120d2a3274606"
+      ><img
+        src="https://i.etsystatic.com/13272069/r/il/a2ecf7/3036568830/il_794xN.3036568830_fujz.jpg"
+      /><span class="price">$21.20</span></a
+    ><a class="large" href="/api/v1/crafts/62fa9b3b0ce120d2a32745fb"
+      ><img
+        src="https://i.etsystatic.com/22679458/r/il/614bc6/3570926706/il_794xN.3570926706_sjlt.jpg"
+      /><span class="price">$5.00</span></a
+    >
+  </div>
+  <div class="stack">
+    <a class="large" href="/api/v1/crafts/62fa9b3b0ce120d2a32745ff"
+      ><img
+        src="https://i.etsystatic.com/16951444/r/il/ff2164/3837765999/il_794xN.3837765999_i076.jpg"
+      /><span class="price">$50.00</span></a
+    ><a class="small" href="/api/v1/crafts/62fa9b3b0ce120d2a3274603"
+      ><img
+        src="https://i.etsystatic.com/17383854/r/il/ad863d/2999132673/il_794xN.2999132673_aihm.jpg"
+      /><span class="price">$41.00</span></a
+    >
+  </div>
+  <div class="stack">
+    <a class="small" href="/api/v1/crafts/62fa9b3b0ce120d2a32745f5"
+      ><img
+        src="https://i.etsystatic.com/33505632/r/il/c6352a/3910425023/il_794xN.3910425023_q95i.jpg"
+      /><span class="price">$15.00</span></a
+    ><a class="large" href="/api/v1/crafts/62fa9b3b0ce120d2a32745fe"
+      ><img
+        src="https://i.etsystatic.com/14233350/r/il/9572b6/1352084663/il_794xN.1352084663_7zo0.jpg"
+      /><span class="price">$65.00</span></a
+    >
+  </div>
+  <div></div>
+</div>
