--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -25,7 +25,7 @@ section:first-of-type {
 .indexTitle {
   font-family: 'Fredericka the Great', cursive;
   color: black;
-  font-size: 60px;
+  font-size: 40px;
   font-weight: 400;
   letter-spacing: 5px;
   margin-top: 15px;
@@ -38,4 +38,72 @@ section:first-of-type {
 
 .carousel-item {
   height: 600px;
+}
+
+#trendy {
+  display: flex;
+  column-gap: 15px;
+  justify-content: center;
+  width: 100%;
+}
+
+.stack {
+  width: 20%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  row-gap: 15px;
+}
+
+.stack a {
+  width: 100%;
+  text-decoration: none;
+  color: black;
+  transition: 300ms;
+}
+
+.stack a:hover {
+  transform: translateY(-2px);
+}
+
+.price {
+  position: relative;
+  background-color: white;
+  border-radius: 10px;
+  font-size: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  left: 5%;
+  top: -30px;
+  text-align: center;
+  padding: 1px 4px;
+  font-family: 'Dosis', sans-serif;
+  font-weight: 600;
+}
+
+span .price {
+  min-width: 10%;
+}
+
+.large {
+  height: 60%;
+}
+
+.small {
+  height: 30%;
+}
+
+.large img,
+.small img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  transition: 300ms;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.large img:hover,
+.small img:hover {
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
 }
