--- a/views/partials/naviForms.ejs
+++ b/views/partials/naviForms.ejs
@@ -56,7 +56,7 @@
       <% if (!currentUser) {%>
       <div id="signIn">Sign In</div>
       <% } else{%>
-      <div id="signOut"><a href="/logout">Sign Out</a></div>
+      <div id="signOut"><a href="/api/v1/logout">Sign Out</a></div>
       <% } %>
       <img src="/images/cart-icon.png" />
       <img src="/images/shop-icon.png" />
