--- a/public/stylesheets/authForms.css
+++ b/public/stylesheets/authForms.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
+  z-index: 100;
 }
 
 #register,
@@ -22,6 +23,7 @@
   top: 25%;
   left: 40%;
   border-radius: 25px;
+  z-index: 100;
 }
 
 #register .title,
