--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,16 +1,24 @@
-section {
+#bannerWelcome,
+#bannerUser {
+  font-size: 30px;
+  letter-spacing: 10px;
+  margin-top: 30px;
+  padding-top: 15px;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
   width: 100%;
   font-family: 'Source Serif 4', serif;
   font-weight: 600;
 }
 
-section:first-of-type {
-  font-size: 30px;
-  letter-spacing: 10px;
-  margin-top: 15px;
+#bannerUser {
+  justify-content: center;
+  align-items: baseline;
+  font-size: 40px;
+}
+
+#bannerWelcome {
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 #bannerCraft,
@@ -20,6 +28,13 @@ section:first-of-type {
   font-size: 80px;
   font-weight: 400;
   letter-spacing: 10px;
+}
+
+section span {
+  font-family: 'Fredericka the Great', cursive;
+  color: #e9dac1;
+  font-weight: 400;
+  font-size: 40px;
 }
 
 .indexTitle {
