--- a/views/partials/naviForms.ejs
+++ b/views/partials/naviForms.ejs
@@ -48,7 +48,7 @@
 <nav id="navibar">
   <div id="naviTop">
     <a href="/api/v1/" id="logo">LifeCraft</a>
-    <form action="">
+    <form action="/api/v1/crafts">
       <input type="text" placeholder="Discover life's inspirations..." />
       <button><img src="/images/search-icon.png" /></button>
     </form>
