--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,124 +1,102 @@
-#bannerWelcome,
-#bannerUser {
-  font-size: 30px;
-  letter-spacing: 10px;
-  margin-top: 30px;
-  padding-top: 15px;
-  display: flex;
+body {
+  overflow-x: hidden;
+}
+
+#query {
   width: 100%;
+  background-color: rgba(158, 210, 198, 0.5);
+  height: 100%;
+  padding: 20px;
+  font-size: 35px;
   font-family: 'Source Serif 4', serif;
-  font-weight: 600;
-}
-
-#bannerUser {
-  justify-content: center;
-  align-items: baseline;
-  font-size: 40px;
-}
-
-#bannerWelcome {
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-#bannerCraft,
-#bannerLife {
-  font-family: 'Fredericka the Great', cursive;
-  color: #e9dac1;
-  font-size: 80px;
   font-weight: 400;
-  letter-spacing: 10px;
 }
 
-section span {
-  font-family: 'Fredericka the Great', cursive;
-  color: #e9dac1;
-  font-weight: 400;
-  font-size: 40px;
-}
-
-.indexTitle {
-  font-family: 'Fredericka the Great', cursive;
-  color: black;
-  font-size: 40px;
-  font-weight: 400;
-  letter-spacing: 5px;
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-
-.carousel-inner {
-  border-radius: 50px;
-}
-
-.carousel-item {
-  height: 600px;
-}
-
-#trendy {
+#main {
   display: flex;
-  column-gap: 15px;
   justify-content: center;
-  width: 100%;
 }
 
-.stack {
-  width: 20%;
+#results {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+}
+
+#filter {
+  position: sticky;
+  top: 40px;
+  width: 15%;
+  margin-top: 10px;
+}
+
+.card {
+  width: 250px;
+  height: 250px;
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-content: center;
-  row-gap: 15px;
-}
-
-.stack a {
-  width: 100%;
-  text-decoration: none;
-  color: black;
+  align-items: flex-start;
+  margin: 20px;
+  border-radius: 5px;
   transition: 300ms;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  font-family: 'Dosis', sans-serif;
 }
 
-.stack a:hover {
+.card:hover {
   transform: translateY(-2px);
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
+}
+
+.card img {
+  width: 250px;
+  height: 200px;
+  object-fit: cover;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .price {
-  position: relative;
+  position: absolute;
+  width: 50px;
+  bottom: 22%;
+  left: 3%;
   background-color: white;
   border-radius: 10px;
-  font-size: 15px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  left: 5%;
-  top: -30px;
   text-align: center;
-  padding: 1px 4px;
-  font-family: 'Dosis', sans-serif;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  font-size: 15px;
+  font-weight: 600;
+}
+.title {
+  font-size: 18px;
   font-weight: 600;
 }
 
-span .price {
-  min-width: 10%;
+#filter {
+  text-align: center;
 }
 
-.large {
-  height: 60%;
+#filter div {
+  font-size: 30px;
 }
 
-.small {
-  height: 30%;
+legend {
+  font-size: 20px;
 }
 
-.large img,
-.small img {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  object-fit: cover;
+#filter a {
+  text-decoration: none;
+  color: black;
+  display: block;
+  font-family: 'Source Serif 4', serif;
+  margin: 5px;
   transition: 300ms;
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
 
-.large img:hover,
-.small img:hover {
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
+#filter a:hover {
+  border-bottom: 2px solid #54bab9;
+  color: #54bab9;
 }
