--- a/views/partials/naviForms.ejs
+++ b/views/partials/naviForms.ejs
@@ -49,7 +49,11 @@
   <div id="naviTop">
     <a href="/api/v1/" id="logo">LifeCraft</a>
     <form action="/api/v1/crafts">
-      <input type="text" placeholder="Discover life's inspirations..." />
+      <input
+        type="search"
+        name="title"
+        placeholder="Discover life's inspirations..."
+      />
       <button><img src="/images/search-icon.png" /></button>
     </form>
     <div id="navicons">
