Edit and Delete buttons hidden if user is not a seller

--- a/views/partials/naviForms.ejs
+++ b/views/partials/naviForms.ejs
@@ -68,10 +68,10 @@
     </div>
   </div>
   <div id="naviBottom">
-    <a href="">Jewelry</a>
-    <a href="">Prints</a>
-    <a href="">Clothing</a>
-    <a href="">Ceramics</a>
-    <a href="">Plants</a>
+    <a href="/api/v1/crafts/filter?category=jewelry">Jewelry</a>
+    <a href="/api/v1/crafts/filter?category=prints">Prints</a>
+    <a href="/api/v1/crafts/filter?category=clothing">Clothing</a>
+    <a href="/api/v1/crafts/filter?category=ceramics">Ceramics</a>
+    <a href="/api/v1/crafts/filter?category=plants">Plants</a>
   </div>
 </nav>
