--- a/public/stylesheets/sellerIndex.css
+++ b/public/stylesheets/sellerIndex.css
@@ -1,18 +1,19 @@
 #seller-dashboard {
-  display: grid;
-  grid-template-columns: 75% 25%;
+  display: flex;
+  justify-content: center;
   height: 100vh;
+  width: 100%;
+  margin-top: 30px;
 }
 
 #display {
-  grid-column: 1/1;
   display: flex;
+  width: 80%;
   justify-content: flex-end;
   align-content: flex-start;
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   flex-wrap: wrap;
-  background-color: #f7ecde;
 }
 
 #display form {
@@ -20,7 +21,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
 }
 
 #display input {
@@ -37,40 +37,39 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  width: 90%;
+  width: 100%;
 }
 
 #controls {
-  grid-column: 2/2;
-  background-color: #f7ecde;
-  font-family: 'Dosis', sans-serif;
-  font-weight: 600;
+  font-family: 'Source Serif 4', serif;
+  width: 15%;
   display: flex;
   justify-content: center;
   align-content: flex-start;
   flex-wrap: wrap;
-  font-size: 30px;
   row-gap: 20px;
 }
 
 #storeName {
   font-size: 50px;
   font-family: 'Fredericka the Great', cursive;
+  font-weight: 600;
+  text-align: center;
 }
 
 .card {
-  width: 350px;
+  width: 250px;
   height: 250px;
   position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   margin: 20px;
-  padding: 10px 0px;
-  border-radius: 20px;
+  border-radius: 5px;
   transition: 300ms;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  font-family: 'Dosis', sans-serif;
 }
 
 .card:hover {
@@ -79,22 +78,24 @@
 }
 
 .card img {
-  width: 300px;
+  width: 250px;
   height: 200px;
   object-fit: cover;
-  border-radius: 20px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .price {
   position: absolute;
   width: 50px;
   bottom: 22%;
-  left: 11%;
+  left: 3%;
   background-color: white;
   border-radius: 10px;
   text-align: center;
   border: 1px solid rgba(0, 0, 0, 0.3);
   font-size: 15px;
+  font-weight: 600;
 }
 .title {
   font-size: 18px;
@@ -102,15 +103,14 @@
 }
 
 #new {
-  font-family: 'Dosis', sans-serif;
-  font-weight: 700;
-  font-size: 40px;
+  font-size: 30px;
   display: block;
   width: 100%;
-  padding: 20px 40px;
+  padding: 10px 30px;
   border-radius: 50px;
   background-color: #9ed2c6;
   transition: 300ms;
+  font-family: 'Source Serif 4', serif;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
 
@@ -122,4 +122,32 @@
 a {
   text-decoration: none;
   color: black;
+}
+
+#filter {
+  text-align: center;
+  width: 100%;
+}
+
+#filter div,
+#storeStat {
+  font-size: 30px;
+}
+
+legend {
+  font-size: 20px;
+}
+
+#filter a {
+  text-decoration: none;
+  color: black;
+  display: block;
+  font-family: 'Source Serif 4', serif;
+  margin: 5px;
+  transition: 300ms;
+}
+
+#filter a:hover {
+  border-bottom: 2px solid #54bab9;
+  color: #54bab9;
 }
