--- a/views/sellerIndex.ejs
+++ b/views/sellerIndex.ejs
@@ -23,45 +23,26 @@
   </div>
   <div id="controls">
     <div id="storeName">Name of Store</div>
-    <div>Sales Total/Store Rating</div>
+    <div id="storeStat">Sales Total/Store Rating</div>
     <form action="/api/v1/crafts/new">
       <button id="new">New Craft</button>
     </form>
-    <form action="">
+    <div id="filter">
       <div>Filter Crafts</div>
       <fieldset>
         <legend>Category</legend>
         <% for (let category of craftSchema.obj.category.enum) {%>
-        <input type="radio" id="<%=category%>" name="category" />
-        <label for="<%=category%>"
-          ><a href="/api/v1/seller/crafts/filter?category=<%=category%>"
-            ><%=category%></a
-          ></label
+        <a href="/api/v1/seller/crafts/filter?category=<%=category%>"
+          ><%=category.charAt(0).toUpperCase() + category.slice(1)%></a
         >
         <% } %>
       </fieldset>
       <fieldset>
         <legend>Price</legend>
-        <input type="radio" id="5-" name="price" />
-        <label for="5-"
-          ><a href="/api/v1/seller/crafts/filter?price=lt5">Under $5</a></label
-        >
-        <input type="radio" id="5-50" name="price" />
-        <label for="5-50"
-          ><a href="/api/v1/seller/crafts/filter?price=min5max50"
-            >$5 to $50</a
-          ></label
-        >
-        <input type="radio" id="50+" name="price" />
-        <label for="50+"
-          ><a href="/api/v1/seller/crafts/filter?price=gt50">Over $50</a></label
-        >
+        <a href="/api/v1/seller/crafts/filter?price=lt5">Under $5</a>
+        <a href="/api/v1/seller/crafts/filter?price=min5max50">$5 to $50</a>
+        <a href="/api/v1/seller/crafts/filter?price=gt50">Over $50</a>
       </fieldset>
-      <fieldset>
-        <legend>Rating</legend>
-        <input type="radio" id="" />
-        <label for="kraken">Kraken</label>
-      </fieldset>
-    </form>
+    </div>
   </div>
 </div>
