--- a/public/stylesheets/edit.css
+++ b/public/stylesheets/edit.css
@@ -1,12 +1,13 @@
 #product {
-  display: grid;
-  grid-template-columns: 60% 40%;
-  background-color: #f7ecde;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   height: 100vh;
+  margin-top: 10px;
 }
 
 #img {
-  grid-column: 1/1;
+  width: 50%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -18,38 +19,46 @@
 
 #img img {
   width: 700px;
-  height: 400px;
+  height: 450px;
   object-fit: cover;
   border-radius: 40px;
-  padding: 20px;
+  margin-top: 20px;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
 }
 
 #editForm {
-  grid-column: 2/2;
+  margin-top: 10px;
+  width: 35%;
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   font-size: 30px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 #editForm form {
   display: flex;
   flex-wrap: wrap;
-  row-gap: 10px;
+  justify-content: flex-start;
+  row-gap: 15px;
+  width: 80%;
 }
 
 #editForm input {
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   border-radius: 10px;
-  width: 70%;
+  width: 100%;
   height: 30px;
+  border: 1px solid gray;
 }
 
 #editForm select {
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   border-radius: 10px;
-  width: 50%;
+  width: 100%;
   height: 35px;
 }
 
@@ -63,8 +72,12 @@ textarea {
 .editable {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
   width: 100%;
+}
+
+.editable label {
+  margin-right: 20px;
 }
 
 #editForm button {
@@ -72,7 +85,8 @@ textarea {
   font-weight: 700;
   font-size: 20px;
   border-radius: 50px;
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  transition: 300ms;
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1);
   width: 200px;
   height: 50px;
 }
@@ -85,10 +99,15 @@ textarea {
 #saveButton {
   position: relative;
   left: 10%;
+  top: 10px;
+  background-color: #54bab9;
+  color: #e9dac1;
 }
 
 #backButton {
   position: absolute;
-  right: 5%;
-  top: 500px;
+  right: 15%;
+  top: 587px;
+  background-color: #9ed2c6;
+  color: #f7ecde;
 }
