--- a/public/stylesheets/new.css
+++ b/public/stylesheets/new.css
@@ -1,12 +1,13 @@
 #product {
-  display: grid;
-  grid-template-columns: 60% 40%;
-  background-color: #f7ecde;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   height: 100vh;
+  margin-top: 10px;
 }
 
 #imagePreview {
-  grid-column: 1/1;
+  width: 50%;
   font-family: 'Dosis', sans-serif;
   display: flex;
   flex-wrap: wrap;
@@ -25,38 +26,46 @@
 
 #imagePreview img {
   width: 700px;
-  height: 400px;
+  height: 450px;
   object-fit: cover;
   border-radius: 40px;
-  padding: 20px;
+  margin-top: 20px;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
 }
 
 #newForm {
-  grid-column: 2/2;
+  margin-top: 10px;
+  width: 35%;
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   font-size: 30px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 #newForm form {
   display: flex;
   flex-wrap: wrap;
-  row-gap: 10px;
+  justify-content: flex-start;
+  row-gap: 15px;
+  width: 80%;
 }
 
 #newForm input {
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   border-radius: 10px;
-  width: 70%;
+  width: 100%;
   height: 30px;
+  border: 1px solid gray;
 }
 
 #newForm select {
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   border-radius: 10px;
-  width: 50%;
+  width: 100%;
   height: 35px;
 }
 
@@ -74,6 +83,10 @@ textarea {
   width: 100%;
 }
 
+.editable label {
+  margin-right: 20px;
+}
+
 #newForm button {
   font-family: 'Dosis', sans-serif;
   font-weight: 700;
@@ -82,6 +95,7 @@ textarea {
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
   width: 200px;
   height: 50px;
+  transition: 300ms;
 }
 
 #newForm button:hover {
@@ -92,10 +106,15 @@ textarea {
 #newButton {
   position: relative;
   left: 10%;
+  top: 10px;
+  background-color: #54bab9;
+  color: #e9dac1;
 }
 
 #backButton {
   position: absolute;
-  right: 5%;
-  top: 500px;
+  right: 15%;
+  top: 587px;
+  background-color: #9ed2c6;
+  color: #f7ecde;
 }
