--- a/public/stylesheets/show.css
+++ b/public/stylesheets/show.css
@@ -1,12 +1,13 @@
 #product {
-  display: grid;
-  grid-template-columns: 60% 40%;
-  background-color: #f7ecde;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   height: 100vh;
+  margin-top: 10px;
 }
 
 #img-review {
-  grid-column: 1/1;
+  width: 50%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -18,18 +19,18 @@
 
 #img-review img {
   width: 700px;
-  height: 400px;
+  height: 450px;
   object-fit: cover;
   border-radius: 40px;
   padding: 20px;
 }
 
 #reviews {
-  width: 75%;
+  width: 100%;
 }
 
 #details {
-  grid-column: 2/2;
+  width: 40%;
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   font-size: 20px;
@@ -103,6 +104,16 @@ select {
   height: 50px;
 }
 
+#buyButton {
+  background-color: #54bab9;
+  color: #e9dac1;
+}
+
+#addCartButton {
+  background-color: #9ed2c6;
+  color: #f7ecde;
+}
+
 #shoppingButtons {
   display: flex;
   flex-wrap: wrap;
@@ -113,4 +124,8 @@ select {
 #description,
 #OOS {
   width: 75%;
+}
+
+#sellerBtns button {
+  margin-top: 10px;
 }
