--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
 </section>
 <% } %>
 <div class="indexTitle">Editor's Picks</div>
-<div class="container">
+<div class="container mt-4">
   <div class="row d-flex justify-content-center">
     <div class="col-10">
       <div
