--- a/views/partials/naviForms.ejs
+++ b/views/partials/naviForms.ejs
@@ -63,7 +63,7 @@
       <div id="signOut"><a href="/api/v1/logout">Sign Out</a></div>
       <% } %>
       <img src="/images/cart-icon.png" />
-      <img src="/images/shop-icon.png" />
+      <a href="/api/v1/seller/crafts"><img src="/images/shop-icon.png" /></a>
       <img src="/images/bell-icon.png" />
     </div>
   </div>
