Added cart schema

--- a/views/partials/naviForms.ejs
+++ b/views/partials/naviForms.ejs
@@ -62,7 +62,7 @@
       <% } else{%>
       <div id="signOut"><a href="/api/v1/logout">Sign Out</a></div>
       <% } %>
-      <img src="/images/cart-icon.png" />
+      <a href="/api/v1/cart"><img src="/images/cart-icon.png" /></a>
       <a href="/api/v1/seller/crafts"><img src="/images/shop-icon.png" /></a>
       <img src="/images/bell-icon.png" />
     </div>
