--- a/views/show.ejs
+++ b/views/show.ejs
@@ -33,22 +33,20 @@
     <div class="price">$ <%=craft.price.toFixed(2)%></div>
     <% if (craft.stock > 0) {%>
     <div id="qtySelect">
-      <label for="qty-select">Quantity</label>
-      <br />
-      <select name="qty-select" id="qty-select">
-        <% for (let i = 1; i <= craft.stock ; i ++) {%>
-        <option value="<%= i %> "><%= i %></option>
-        <% } %>
-      </select>
-    </div>
-    <div id="shoppingButtons">
-      <form action="/api/v1/crafts/<%=craft._id%>/edit" method="GET">
+      <form action="/api/v1/cart" method="POST">
+        <label for="quantity">Quantity</label>
+        <br />
+        <select name="quantity" id="quantity">
+          <% for (let i = 1; i <= craft.stock ; i ++) {%>
+          <option value="<%=i%>"><%=i%></option>
+          <% } %>
+        </select>
+        <input type="hidden" name="craftId" value="<%=craft._id%>" />
         <button id="buyButton">Buy Now | <%=craft.stock%> in stock</button>
       </form>
-      <form
-        action="/api/v1/crafts/<%=craft._id%>/?_method=DELETE"
-        method="POST"
-      >
+    </div>
+    <div id="shoppingButtons">
+      <form action="/api/v1/cart" method="POST">
         <button id="addCartButton">Add to Cart</button>
       </form>
     </div>
