--- a/public/stylesheets/cart.css
+++ b/public/stylesheets/cart.css
@@ -7,3 +7,43 @@
   font-family: 'Source Serif 4', serif;
   font-weight: 400;
 }
+
+#main {
+  display: flex;
+  justify-content: center;
+}
+
+#cartItems {
+  width: 70%;
+  display: flex;
+  margin-top: 20px;
+}
+
+.item {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+  font-family: 'Dosis', sans-serif;
+  font-size: 20px;
+}
+
+#checkOut {
+  width: 15%;
+}
+
+.card {
+  font-family: 'Dosis', sans-serif;
+  font-size: 23px;
+  font-weight: 600;
+  display: flex;
+  flex-wrap: wrap;
+  width: 50%;
+}
+
+img {
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+}
