--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -5,9 +5,23 @@
   <div>Please sign in to purchase.</div>
   <% } else {%>
   <div>There are <%=cart.products.length%> item(s) in your cart.</div>
-  <% } %>
 </div>
 <div id="main">
-  <div id="cartItems"></div>
+  <div id="cartItems">
+    <% if (cart.products.length > 0){%> <% for (item of cart.products) {%>
+    <div class="item">
+      <div class="card">
+        <div class="title"><%=item.product.title%></div>
+        <img src="<%=item.product.image%>" />
+      </div>
+      <div class="quantity"><%= item.quantity %></div>
+      <div class="price">
+        $<%=(item.product.price*item.quantity).toFixed(2)%>
+        ($<%=item.product.price.toFixed(2)%> each)
+      </div>
+    </div>
+    <% } %> <% } %>
+  </div>
   <div id="checkOut"></div>
+  <% } %>
 </div>
