--- a/views/home.ejs
+++ b/views/home.ejs
@@ -154,10 +154,10 @@
       ><img
         src="https://i.etsystatic.com/33505632/r/il/c6352a/3910425023/il_794xN.3910425023_q95i.jpg"
       /><span class="price">$15.00</span></a
-    ><a class="large" href="/api/v1/crafts/62fa9b3b0ce120d2a32745fe"
+    ><a class="large" href="/api/v1/crafts/62fa9b3b0ce120d2a32745fa"
       ><img
-        src="https://i.etsystatic.com/14233350/r/il/9572b6/1352084663/il_794xN.1352084663_7zo0.jpg"
-      /><span class="price">$65.00</span></a
+        src="https://i.etsystatic.com/22679458/r/il/6e8e7d/3618552419/il_794xN.3618552419_j0lb.jpg"
+      /><span class="price">$5.00</span></a
     >
   </div>
   <div></div>
