--- a/views/sellerIndex.ejs
+++ b/views/sellerIndex.ejs
@@ -22,8 +22,8 @@
     </div>
   </div>
   <div id="controls">
-    <div id="storeName">Name of Store</div>
-    <div id="storeStat">Sales Total/Store Rating</div>
+    <div id="storeName"><%=currentUser.username %></div>
+    <div id="storeStat">725 Sales/&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</div>
     <form action="/api/v1/crafts/new">
       <button id="new">New Craft</button>
     </form>
