--- a/public/stylesheets/new.css
+++ b/public/stylesheets/new.css
@@ -105,7 +105,7 @@ textarea {
 
 #newButton {
   position: relative;
-  left: 10%;
+  left: 20px;
   top: 10px;
   background-color: #54bab9;
   color: #e9dac1;
@@ -113,7 +113,7 @@ textarea {
 
 #backButton {
   position: absolute;
-  right: 15%;
+  right: 150px;
   top: 587px;
   background-color: #9ed2c6;
   color: #f7ecde;
