--- a/public/stylesheets/show.css
+++ b/public/stylesheets/show.css
@@ -7,14 +7,15 @@
 }
 
 #img-review {
-  width: 42%;
+  width: 50%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-content: flex-start;
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   font-size: 50px;
+  margin-left: 10px;
 }
 
 #img-review img {
@@ -31,7 +32,7 @@
 }
 
 #details {
-  width: 30%;
+  width: 35%;
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   font-size: 20px;
@@ -129,9 +130,6 @@ select {
 #OOS {
   font-size: 30px;
   font-weight: 600;
-}
-
-#OOS {
   width: 100%;
 }
 
